client/src/components/FeedItem/FeedItem.module.css
.container {
	position: relative;
}

.media {
	height: 180px;
	overflow: hidden;
	filter: grayscale(35%);
	border-radius: 0;
	position: relative;
	z-index: 2;
}

.placeholder {
	z-index: 1;
	opacity: 0.15;
	position: absolute;
	top: 50%;
	left: 50%;
	transform: translate(-50%, -50%);
}

.details {
	margin: auto;
	position: relative;
	font-size: 0.8125rem !important;
}

.wrapper {
	display: flex;
	flex-wrap: wrap;
	padding-top: 6px;
}

.source,
.date {
	display: flex;
	align-items: center;
	height: 100%;
}

.avatar {
	width: 18px !important;
	height: 18px !important;
	margin-right: 8px;
	font-weight: bold !important;
	font-size: 0.875rem !important;
} 

